[gd_scene load_steps=3 format=2]

[ext_resource path="res://questionnaires/stress/StressJoy.gd" type="Script" id=1]
[ext_resource path="res://black_background.jpg" type="Texture" id=2]

[node name="StressJoy" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 352.0
margin_bottom = 77.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 75.0
margin_bottom = 100.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StressTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 14.0
text = "Stress"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 15 )

[node name="JoyQ1" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 37.0
margin_right = 330.0
margin_bottom = 51.0
text = "You feel discouraged"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 55.0
margin_right = 330.0
margin_bottom = 71.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 23.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HSlider_J1" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 27.0
margin_right = 302.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 306.0
margin_right = 311.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 75.0
margin_right = 330.0
margin_bottom = 106.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="JoyQ2" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 110.0
margin_right = 330.0
margin_bottom = 124.0
text = "You enjoy yourself"

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 128.0
margin_right = 330.0
margin_bottom = 144.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 18.0
margin_right = 23.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HSlider_J2" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 27.0
margin_right = 302.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 306.0
margin_right = 311.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 148.0
margin_right = 330.0
margin_bottom = 179.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="JoyQ3" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 183.0
margin_right = 330.0
margin_bottom = 214.0
text = "You feel you are doing things because you
have to and not because you want to"

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 218.0
margin_right = 330.0
margin_bottom = 234.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 18.0
margin_right = 23.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HSlider_J3" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 27.0
margin_right = 302.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 306.0
margin_right = 311.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 238.0
margin_right = 330.0
margin_bottom = 269.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="JoyQ4" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 273.0
margin_right = 330.0
margin_bottom = 287.0
text = "You feel criticized or judged"

[node name="HBoxContainer7" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 291.0
margin_right = 330.0
margin_bottom = 307.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 18.0
margin_right = 23.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HSlider_J4" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 27.0
margin_right = 302.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 306.0
margin_right = 311.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HBoxContainer8" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 311.0
margin_right = 330.0
margin_bottom = 342.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="JoyQ5" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 346.0
margin_right = 330.0
margin_bottom = 360.0
text = "You feel mentally exhausted."

[node name="HBoxContainer9" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 364.0
margin_right = 330.0
margin_bottom = 380.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 18.0
margin_right = 23.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HSlider_J5" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 27.0
margin_right = 302.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 306.0
margin_right = 311.0
margin_bottom = 16.0
rect_min_size = Vector2( 5, 0 )

[node name="HBoxContainer10" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 384.0
margin_right = 330.0
margin_bottom = 415.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_right = 10.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="AlmostNever" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 14.0
margin_right = 60.0
margin_bottom = 31.0
text = "Almost
Never"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )

[node name="Sometimes" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 88.0
margin_top = 8.0
margin_right = 161.0
margin_bottom = 22.0
text = "Sometimes"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 165.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 0 )

[node name="Often" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 194.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
text = "Often"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 234.0
margin_right = 269.0
margin_bottom = 31.0
rect_min_size = Vector2( 35, 0 )

[node name="Usually" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 273.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "Usually"

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 419.0
margin_right = 330.0
margin_bottom = 439.0
text = "Next"

[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/HSlider_J1" to="." method="_on_HSlider_J1_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/HSlider_J2" to="." method="_on_HSlider_J2_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer5/HSlider_J3" to="." method="_on_HSlider_J3_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer7/HSlider_J4" to="." method="_on_HSlider_J4_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer9/HSlider_J5" to="." method="_on_HSlider_J5_value_changed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/Button" to="." method="_on_Button_button_up"]
